# Zangra

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.toml  inviteurl.txt  linuxdependencies.txt  zangra.db
.github/workflows/: notify.yml  rust.yml
migrations/: 20221016073934_start.sql  20221016075038_embed.sql
