[package]
name = "Zangra"
version = "0.2.0"
authors = ["Duy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = "0.6"
axum-macros = "0.3"
chrono = "0.4"
chrono-tz = "0.5"
itertools = "0.10"
json = "0.12"
linkify = "0.8"
rand = "0.7"
regex = "1"
serde_json = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["local-time", "json"] }
url = "2"

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["builder", "cache", "client", "collector", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend", "voice", "unstable_discord_api"]

#[dependencies.reqwest]
#version = "0.10"
#features = ["blocking"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.6"
features = ["sqlite", "runtime-tokio-rustls", "macros", "sqlx-macros"]